# docker-container-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: auto-pr.yaml  build-and-publish.yml  cd-pipeline.yml  ci-pipeline  ci-pipeline.yml  ci.yml  publish.yml
